update static frontpage

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,29 @@
   </head>
   
   <body>
-    <div class = "header">
-      <h1 style ="color:aliceblue;font-size:44px;">
-      <img src ="../img/logo.png" alt = "Bikeable" style = "padding-left:20px;" width = "160px"/> NYC</h1>
-    </div>
-
+      <div class = "header">
+        <div style="margin:auto;width:320px;align-content:center">
+        <!-- <h1 style ="color:aliceblue;font-size:44px;margin-top:0px;"> -->
+        <p style="text-align: center;">
+        <img src ="../img/logo.png" alt = "Bikeable" style = "margin:auto;padding:20px;align:middle;" width = "160px"/>
+        </p>
+      <!-- </h1> -->
+        </div>
+      </div>
+    <br/><br/>
     <div class = "station-container">
-      <h3>Station: St. Marks Pl</h3>
-      <h5>Bikes Available:12/54</h5>
-      <p style = "font-size:12px;">Updated just now</p>
+      <h2>LaGuardia Pl & W 3 St: 16/35 Bikes</h2>
+      <p style = "font-size:12px;">137 meters away. Updated just now.</p>
+    </div>
+    <br/>
+    <div class = "station-container">
+      <h2>Washington Pl & Broadway 13/26 Bikes</h2>
+      <p style = "font-size:12px;">205 meters away. Updated just now.</p>
+    </div>
+    <br/>
+    <div class = "station-container">
+      <h2>Mercer St & Bleecker St: 32/43 Bikes</h2>
+      <p style = "font-size:12px;">236 meters away. Updated just now.</p>
     </div>
   </body>
 </html>
